assets/css/style.css
body {
  background-color: #1F1F1F;
  color: white;
  text-align: center;
  font-family: 'Open Sans', sans-serif !important;
  font-size: 18pt;
  padding-left: 5px;
  padding-right: 5px;
  margin-right: auto !important;
  margin-left: auto !important;
  width: 100%;
  min-width: 500px;
  display: flex;
  flex-direction: column;
}

h1 a, h1 a:visited, h1 a:active {
  color: white;
  text-decoration: none;
}

a, a:visited, a:active {
  color: #9DDFD5;
  text-decoration: none;
}

a.button {
  border: dotted #9DDFD5;
  padding-left: 1em;
  padding-right: 1em;
  border-radius: 1em;
  line-height: 2em;
  font-size: 1.25em;
}

a.button.donate {
  background-color: #2d6f65;
  font-size: 2em;
  display: block;
  width: 100%;
  line-height: 1.25em;
  padding-left: 0em;
  padding-right: 0em;
  margin-right: auto;
  margin-left: auto;
}

header {
  width: 90%;
  max-width: 800px;
  margin-right: auto;
  margin-left: auto;
  border-bottom: 3px dotted gray;
  padding-bottom: 0.25ex;
}

header .logo {
  background-color: #2d6f65;
  border-radius: 1em;
  padding: 0.25em;
  font-family: 'Oswald', sans-serif;
}

header .logo img {
  width: 60%;
  margin-bottom: 0;
}

header .subtitle-1 {
  font-size: 1.7em;
}

header .subtitle-2 {
  font-size: 1.0em;
}

header .mission {
  margin-top: 0.5em;
  font-size: 1.0em;
}

h1 {
  margin: 0;
  margin-bottom: 1ex;
}

h2 {
  margin: 0;
}

.address {
  padding-bottom: 0.5ex;
}

.address .county {
  font-size: 0.8em;
}

section {
  display: flex;
  flex-direction: column;
  width: 90%;
  max-width: 800px;
  margin-right: auto;
  margin-left: auto;
  margin-bottom: 1ex;
  clear: both;
  border-bottom: 3px dotted gray;
  padding-bottom: 1ex;
  text-align: center;
}

.membership img {
  width: 100%;
  height: auto;
  border-radius: 1em;
}

.membership ul {
  text-align: left;
}

div.event {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  padding: 0;
  padding-bottom: 0.5em;
  margin-bottom: 0.5em;
  margin-top: 0.5em;
  border-bottom: 3px dotted gray;
}

div.event div.description {
  font-size: 75%;
}

img.event {
  width: 100%;
  margin: auto;
  padding: 0;
  border-radius: 1em;
}

.open-tuesday, .monthly {
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(var(--vp-event-grid-col-container-optimal-width),1fr));
  gap: 0px 30px;
  justify-items: center;
}

.open-tuesday div.event, .monthly div.event {
  display: flex;
  max-width: var(--vp-event-grid-card-max-width);
  padding: 0;
  border: 2px solid white;
  border-radius: 0;
}

.open-tuesday img.event, .monthly img.event {
  padding: 0;
  border-radius: 0;
}

.past-events {
  padding-top: 1ex;
}

.links {
  border-radius: 1em;
  background-color: #080808;
  margin-bottom: 0.5em;
  width: 100%;
}

.links img {
  width: 1.5em;
  margin: 0.25em;
  margin-left: 0.5em;
  margin-right: 0.5em;
}

div.rooms {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-content: space-between;
  align-items: start;
}

img.room {
  height: 25vh;
  border-radius: 1em;
  padding: 0ex;
}

.clear {
  clear: both;
}

.guidelines {
  text-align: left;
}

.nav {
  padding-top: 0.5em;
  padding-bottom: 0.5em;
}

.paypal {
  text-align: left;
}

.paypal img {
  float: right;
  width: 40%;
  min-width: 200px;
  padding-left: 1em;
  padding-bottom: 1em;
}

footer {
  padding-top: 0.5em;
}

@media screen and (max-width: 1024px) {
  h1 {
    font-size: 10vw;
  }
  .links img {
    margin-left: 0.25em;
    margin-right: 0.25em;
  }

  header .subtitle-1 {
    font-size: 1.1em;
  }
}

